bugfix(ui): small bugfixes in ui around border disappearing on mobile firefox

--- a/ui/src/scss/mixins.scss
+++ b/ui/src/scss/mixins.scss
@@ -217,6 +217,12 @@ $screens: (
   }
 }
 
+@mixin mouse-only() {
+  @media (pointer: fine) {
+    @content;
+  }
+}
+
 @mixin position($top, $right: $top, $bottom: $top, $left: $right) {
   top: $top;
   right: $right;
